--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@ input{width:25px;height:25px;background-color: transparent;}
     }</style>
 <head>
 <meta charset="utf-8">
-<title>Magnum PKG Download</title>
+<title>Magnum Tools Download</title>
 <link rel="stylesheet prefetch" href="Style.css">
 </head>
 <body class="bg-darker">
-<br><h1 style='font-size:25px;text-align:center;text-shadow: 4px 4px 4px black;'>Download Homebrew PKG PlayStation</h1>
+<br><h1 style='font-size:25px;text-align:center;text-shadow: 4px 4px 4px black;'>Download Tools PlayStation</h1>
 </script>
 <div style="text-align:center" id="MyItems">
   <br>
