--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@ input{width:25px;height:25px;background-color: transparent;}
   <br><br><br>
 <h1 style='font-size:20px;text-align:center;color:yellow;text-shadow: 4px 4px 4px black;'>PS4 Tools Download</h1>
   <a href="https://bit.ly/3s8zA1L" target="_blank"><button style='font-size:20px;text-align:center;background-color:white' class="pointer" type="button"> PS4 PS2 Classics GUI </button></a>
-<a href="https://bit.ly/3yIcpxB" target="_blank"><button style='font-size:20px;text-align:center;background-color:white' class="pointer" type="button"> PS4 Trainer 1.0.6 </button></a>
-<a href="https://bit.ly/3CFaNr1" target="_blank"><button style='font-size:20px;text-align:center;background-color:white' class="pointer" type="button"> PS4 Trainer APK </button></a>
+<a href="http://ps4trainer.com/download/PS4_Trainer_1.0.6.exe"><button style='font-size:20px;text-align:center;background-color:white' class="pointer" type="button"> PS4 Trainer 1.0.6 </button></a>
+<a href="https://bit.ly/3CFaNr1"><button style='font-size:20px;text-align:center;background-color:white' class="pointer" type="button"> PS4 Trainer APK </button></a>
 </div>
     </body>
     </html>
