--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@ input{width:25px;height:25px;background-color: transparent;}
 <div style="text-align:center" id="MyItems">
   <br>
   <h1 style='font-size:20px;text-align:center;color:yellow;text-shadow: 4px 4px 4px black;'>PS3 Tools Download</h1>
-<a href="https://bit.ly/37ASa9d" target="_blank"><button style='font-size:20px;text-align:center;background-color:white' class="pointer" type="button"> CFW to OFW </button></a>
-  <a href="https://bit.ly/3AB4tyN" target="_blank"><button style='font-size:20px;text-align:center;background-color:white' class="pointer" type="button"> PS3 Tools </button></a>
+<a href="https://bit.ly/37ASa9d" target="_blank"><button style='font-size:20px;text-align:center;background-color:white' class="pointer" type="button"> CFW2OFW by CM </button></a>
+  <a href="https://bit.ly/3AB4tyN" target="_blank"><button style='font-size:20px;text-align:center;background-color:white' class="pointer" type="button"> PS3 Tools by Aldo </button></a>
   <a href="https://bit.ly/3CQRefB" target="_blank"><button style='font-size:20px;text-align:center;background-color:white' class="pointer" type="button"> PS3 ISO TOOLS V2.2 </button></a>
   <br><br><br>
 <h1 style='font-size:20px;text-align:center;color:yellow;text-shadow: 4px 4px 4px black;'>PS4 Tools Download</h1>
