--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ input{width:25px;height:25px;background-color: transparent;}
   <a href="https://bit.ly/2UbKyqN" target="_blank"><button style='font-size:20px;text-align:center;background-color:white' class="pointer" type="button"> FPKG Editor </button></a>
 <br><br>
   <a href="https://bit.ly/3yJj5eZ" target="_blank"><button style='font-size:20px;text-align:center;background-color:white' class="pointer" type="button"> FPKG REPACK by MG </button></a>
-  <a href="https://bit.ly/3lZdM7J" target="_blank"><button style='font-size:20px;text-align:center;background-color:white' class="pointer" type="button"> FPKG Tools </button></a>
+  <a href="https://bit.ly/3lZdM7J" target="_blank"><button style='font-size:20px;text-align:center;background-color:white' class="pointer" type="button"> Fake PKG Tools </button></a>
    </div>
     </body>
     </html>
