--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@ input{width:25px;height:25px;background-color: transparent;}
   <a href="https://bit.ly/3s8zA1L" target="_blank"><button style='font-size:20px;text-align:center;background-color:white' class="pointer" type="button"> Convert Game PS2toPS4 </button></a>
 <a href="http://ps4trainer.com/download/PS4_Trainer_1.0.6.exe"><button style='font-size:20px;text-align:center;background-color:white' class="pointer" type="button"> PS4 Trainer 1.0.6 </button></a>
 <a href="http://ps4trainer.com/download/ps4trainer.apk"><button style='font-size:20px;text-align:center;background-color:white' class="pointer" type="button"> PS4 Trainer APK </button></a>
-  <a href="https://bit.ly/2UbKyqN" target="_blank"><button style='font-size:20px;text-align:center;background-color:white' class="pointer" type="button"> FPKG Editor </button></a>
+  <a href="https://bit.ly/2UbKyqN" target="_blank"><button style='font-size:20px;text-align:center;background-color:white' class="pointer" type="button"> FPKG Editor 0.2.244 </button></a>
 <br><br>
   <a href="https://bit.ly/3yJj5eZ" target="_blank"><button style='font-size:20px;text-align:center;background-color:white' class="pointer" type="button"> FPKG REPACK by MG </button></a>
-  <a href="https://bit.ly/3lZdM7J" target="_blank"><button style='font-size:20px;text-align:center;background-color:white' class="pointer" type="button"> Fake PKG Tools </button></a>
+  <a href="https://bit.ly/3lZdM7J" target="_blank"><button style='font-size:20px;text-align:center;background-color:white' class="pointer" type="button"> FPKG Tools 1.5.1 </button></a>
    </div>
     </body>
     </html>
